--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
-        "ext-json": "*",
         "encore/laravel-admin": "^1.7",
         "fideloper/proxy": "^4.0",
         "laravel-admin-ext/ckeditor": "^1.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "overtrue/laravel-lang": "^3.0",
-        "predis/predis": "^1.1",
-        "yansongda/pay": "^2.8"
+        "ext-json": "*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
